--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,7 +133,7 @@
 #section--modal .modal--menu h3 {
   font-weight: 700;
   font-size: 24px;
-  line-height: 20px;
+  line-height: 30px;
   color: #001018;
   width: 90%;
   font-style: italic;
@@ -212,7 +212,7 @@
 #pratique--modal .modal--menu h3 {
   font-weight: 700;
   font-size: 24px;
-  line-height: 20px;
+  line-height: 30px;
   color: #001018;
   width: 90%;
   font-style: italic;
@@ -813,6 +813,9 @@ body {
   .display-none {
     display: contents;
   }
+  .text-center {
+    text-align: center;
+  }
   #navigation #logo--navigation__width {
     width: 200px;
     height: 50px;
@@ -942,7 +945,7 @@ body {
     height: auto;
     z-index: 5;
     background-image: url("../images/image.svg");
-    background-position: top;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -952,7 +955,7 @@ body {
     height: auto;
     z-index: 5;
     background-image: url("../images/morphologie.svg");
-    background-position: top;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -962,7 +965,7 @@ body {
     height: auto;
     z-index: 5;
     background-image: url("../images/pratique.svg");
-    background-position: top;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -972,7 +975,7 @@ body {
     height: auto;
     z-index: 5;
     background-image: url("../images/resume.svg");
-    background-position: top;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -1052,6 +1055,9 @@ body {
   }
   .card--container {
     margin-bottom: 1.5rem;
+  }
+  .card--container .card p {
+    width: 100%;
   }
   .resume--block {
     margin-bottom: 2rem;
