--- a/assets/sass/layouts/_morphologie.scss
+++ b/assets/sass/layouts/_morphologie.scss
@@ -104,7 +104,7 @@
       }
 
       h3 {
-         @include paragraph(24px, $dark, 700);
+         @include title(24px, $dark, 700, 30px);
          width: 90%;
          font-style: italic;
          text-transform: uppercase;
@@ -185,7 +185,7 @@
       }
 
       h3 {
-         @include paragraph(24px, $dark, 700);
+         @include title(24px, $dark, 700, 30px);
          width: 90%;
          font-style: italic;
          text-transform: uppercase;
